test/corpus/arraylike.txt

======
Arrays
======

{ }
{ 42 }
{ 1 2 }
{ "key" 2 }

---

(source_file
	(collection (array))
	(collection (array (number (integer (base10)))))
	(collection (array (number (integer (base10))) (number (integer (base10)))))
	(collection (array (string) (number (integer (base10)))))
)

===============
Complex Numbers
===============

C{ 1/2 1/3 }
C{ 0 1 }

---

(source_file
	(collection (complex (number (ratio)) (number (ratio))))
	(collection (complex (number (integer (base10))) (number (integer (base10)))))
)

===========
Byte Arrays
===========

B{ }
B{ 1 2 3 }

---

(source_file
	(collection (byte_array))
	(collection (byte_array
		(integer (base10))
		(integer (base10))
		(integer (base10))
	))
)

=======
Vectors
=======

V{ }
V{ "some" "stuff" "here" 42+1/2 }

---

(source_file
	(collection (vector))
	(collection (vector (string) (string) (string) (number (ratio))))
)

==========
Hashtables
==========

H{ }

IH{ }

H{ { 1 2 } { 3 4 } }

---

(source_file
	(collection (hashtable))
	(collection (id_hashtable))
	(collection (hashtable
		(array (number (integer (base10))) (number (integer (base10))))
		(array (number (integer (base10))) (number (integer (base10)))))))

========
Hash Set
========

HS{ }
HS{ 4 2 42 }

---

(source_file
	(collection (hashset))
	(collection (hashset
					(number (integer (base10))) 
					(number (integer (base10))) 
					(number (integer (base10))))))

======
Tuples
======


T{ class }
T{ class f 4 17 "name" "description" 0xfa }
T{ class { id 4 } { iteration 17 } { name "name" }
		 { description "description" } { code 0xfa } }

---

(source_file
	(tuple (symbol))
	(tuple (symbol) (f) (number (integer (base10)))
			    (number (integer (base10)))
				(string) (string)
				(number (integer (base16))))
	(tuple (symbol)
		(property_pair (symbol) (number (integer (base10))))
		(property_pair (symbol) (number (integer (base10))))
		(property_pair (symbol) (string))
		(property_pair (symbol) (string))
		(property_pair (symbol) (number (integer (base16))))
	)
)
