test/corpus/definitions.txt

================
Word Definitions
================

: word ( input -- output ) some words here ;

---

(source_file
	(definition
		(colon)
		(symbol)
		(effect
			(inputs (symbol))
			(outputs (symbol)))
		(symbol)
		(symbol)
		(symbol))
)

