test/corpus/fry_quotations.txt

=========
Fry Quote
=========

'[ a b c ]

---

(source_file
	(fry_quote (symbol) (symbol) (symbol))
)

===========
Fry Hashset
===========

'HS{ 7 8 }

---

(source_file
	(collection
		(fry_hashset
			(number (integer (base10)))
			(number (integer (base10)))))
)

=============
Fry Hashtable
=============

'H{ { 7 "seven" } { 8 "eight" } }

---

(source_file
	(collection
		(fry_hashtable
			(array (number (integer (base10))) (string))
			(array (number (integer (base10))) (string))))
)

=========
Fry Array
=========

TODO

'{ }

================
Fry Quote Splice
================

'[ @ ]
[ even? ] '[ @ dup ] map

---

(source_file
	(fry_quote (quote_splice))
	(quote (symbol))
	(fry_quote (quote_splice) (symbol))
	(symbol)
)
