test/corpus/numbers.txt

===============
Number Literals
===============

123456
-10
2,432,902,008,176,640,000
1_000_000

0x16
0xfa
0xFA
0xFFa7

---

(source_file
	(number (integer (base10)))
	(number (integer (base10)))
	(number (integer (base10)))
	(number (integer (base10)))
	(number (integer (base16)))
	(number (integer (base16)))
	(number (integer (base16)))
	(number (integer (base16)))
)

